Added yarn to installation

--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -7,7 +7,8 @@ ENV WORKDIR "/var/www/app"
 RUN apk upgrade --update && apk --no-cache add \
     git autoconf tzdata openntpd libcurl curl-dev coreutils \
     libmcrypt-dev freetype-dev libxpm-dev libjpeg-turbo-dev libvpx-dev \
-    libpng-dev libressl libressl-dev libxml2-dev postgresql-dev icu-dev
+    libpng-dev libressl libressl-dev libxml2-dev postgresql-dev icu-dev \
+    yarn
 
 RUN docker-php-ext-configure intl \
     && docker-php-ext-configure opcache \
