--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -7,7 +7,8 @@ ENV WORKDIR "/var/www/app"
 RUN apk upgrade --update && apk --no-cache add \
     git autoconf tzdata openntpd libcurl curl-dev coreutils \
     libmcrypt-dev freetype-dev libxpm-dev libjpeg-turbo-dev libvpx-dev \
-    libpng-dev libressl-dev libxml2-dev postgresql-dev icu-dev
+    libpng-dev libressl-dev libxml2-dev postgresql-dev icu-dev \
+    yarn
 
 RUN apk add --no-cache --virtual build-dependencies icu-dev libxml2-dev freetype-dev libpng-dev libjpeg-turbo-dev g++ make autoconf
 
