--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -17,7 +17,7 @@ RUN docker-php-ext-configure intl \
     --with-xpm-dir=/usr/include/
 
 RUN docker-php-ext-install -j$(nproc) gd iconv pdo pdo_mysql pdo_pgsql curl \
-    bcmath mcrypt mbstring json xml xmlrpc zip intl opcache
+    bcmath mcrypt mbstring json xml xmlrpc zip intl opcache exif
 
 # Add timezone
 RUN rm /etc/localtime && \
