--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -8,12 +8,13 @@ RUN apk upgrade --update && apk --no-cache add \
     git autoconf tzdata openntpd libcurl coreutils \
     libmcrypt-dev freetype-dev libxpm-dev libjpeg-turbo-dev libvpx-dev \
     libpng-dev libressl-dev libxml2-dev icu-dev \
-    yarn
+    yarn openldap-dev
 
 RUN apk add --no-cache --virtual build-dependencies icu-dev libxml2-dev freetype-dev libpng-dev libjpeg-turbo-dev g++ make autoconf
 
 RUN docker-php-ext-configure intl \
     && docker-php-ext-configure opcache \
+    && docker-php-ext-configure ldap \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ \
     --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
     --with-xpm-dir=/usr/include/
