--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -20,7 +20,7 @@ RUN docker-php-ext-configure intl \
     --with-xpm-dir=/usr/include/
 
 RUN docker-php-ext-install -j$(nproc) gd iconv pdo pdo_mysql pdo_pgsql curl \
-    bcmath mbstring json xml xmlrpc zip intl opcache exif
+    bcmath mbstring json xml xmlrpc zip intl opcache exif ldap
 
 # Add mcrypt
 RUN yes '' | pecl install -f mcrypt
