--- a/8.1/Dockerfile
+++ b/8.1/Dockerfile
@@ -10,7 +10,7 @@ RUN cd /usr/local/etc/php/conf.d/ && \
 RUN apk upgrade --update && apk --no-cache add \
     gcc g++ make autoconf tzdata openntpd libcurl curl-dev coreutils \
     freetype-dev libxpm-dev libjpeg-turbo-dev libvpx-dev \
-    libpng-dev libressl libressl-dev libxml2-dev icu-dev libzip-dev \
+    libpng-dev libressl libxml2-dev icu-dev libzip-dev \
     postgresql-dev yarn openldap-dev
 
 RUN apk add --no-cache --virtual build-dependencies icu-dev libxml2-dev \
@@ -22,7 +22,7 @@ RUN docker-php-ext-configure intl \
     && docker-php-ext-configure gd --with-freetype --with-jpeg
 
 RUN docker-php-ext-install -j$(nproc) gd pdo pdo_mysql pdo_pgsql curl \
-    bcmath json xml xmlrpc zip intl opcache exif ldap
+    bcmath json xml zip intl opcache exif ldap
 
 # Install Redis
 RUN docker-php-source extract \
