--- a/.github/workflows/create-and-publish-docker-images.yaml
+++ b/.github/workflows/create-and-publish-docker-images.yaml
@@ -1,8 +1,9 @@
 name: Create and publish Docker images
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - master
 
 jobs:
   push_to_registry:
